# mri

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  integrate.sh  setup.cfg  setup.py
docs/: conf.py  index.rst
src/mri/: __init__.py  __main__.py  skeleton.py
tests/: conftest.py  test_skeleton.py
