[metadata]
name = mri
description = Python project fulfilling the hMRI task.
author = c
author_email = davidvargas005@hotmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/avargs/mri
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python


[options]
# Irrelevant for modern python packaging
# zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata
	#python_version<"4.0"
	nibabel
	numpy
	matplotlib

[options.packages.find]
where = src

[options.entry_points]
 Add here console scripts like:
 console_scripts =
     script_name = mri.__main__:main

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 90
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.4
package = mri
